--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build Hugo site
         run: hugo --minify
 
+      - name: List built files
+        run: ls -R public
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3  # <--- Updated version here
         with:
